@@ -1,0 +1,8 @@
+
+#ifndef _INCL_APPBUNDLE_H_
+#define _INCL_APPBUNDLE_H_
+
+int FindAppBundlePath(const char *appid, const char *appiddesc, const char *desc, char *buf, size_t bufsize);
+
+#endif
+
