@@ -1,4 +1,6 @@
 Current:
+Ryan C. Gordon (icculus.org) - Wed May 18 11:40:10 EDT 2005
+ * Added appbundleid and appbundledesc to setup.xml install tag (MacOS only).
 Ryan C. Gordon (icculus.org) - Tue May 17 12:21:23 EDT 2005
  * Added .rar archive plugin.
 Ryan C. Gordon (icculus.org) - Sat Nov 20 08:42:16 EST 2004
